# homework2-linux

traffic_simulator 3/: CMakeLists.txt  README  build.sh  create_kmz.sh
traffic_simulator 3/applications/: CMakeLists.txt  event.cpp  event.cpp~  event.hpp  event.hpp~  iconmaker.cpp  simulator.cpp
traffic_simulator 3/controller/: CMakeLists.txt  color.hpp  traffic_controller.cpp  traffic_controller.hpp  traffic_light.cpp  traffic_light.hpp
traffic_simulator 3/csv/: CMakeLists.txt  csv_reader.cpp  csv_reader.hpp
traffic_simulator 3/data/: Traffic_Signals_SF.csv
traffic_simulator 3/pngwriter/: CMakeLists.txt
